# Neuroinformatics

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
Data/: readHousingData.h
Math/: Functions.cpp  Functions.h  Functions.h.old  Matrix.cpp  Matrix.h
Misc/: generateNNDataLogicCurcit.cpp  generateNNDataLogicCurcit.h
NeuralNetwork/: ActivationTypes.h  DenseLayer.cpp  DenseLayer.h  InitializationMode.cpp  InitializationMode.h
NeuralNetworks/: ActivationTypes.h  DenseLayer.cpp  DenseLayer.h  InitializationMode.cpp  InitializationMode.h  LossType.h  NeuralNetwork.cpp  NeuralNetwork.h  ScalerType.h
Notes/: GeneraNotes.md
tests/: test.cpp
tests/Functions/: Functions.h
